# timeseries-generator

./: README.md  pyproject.toml
timeseries_generator/: base_factor.py
